--- a/telas/Tis2/client/src/index.html
+++ b/telas/Tis2/client/src/index.html
@@ -13,30 +13,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
      
         <div class="text-center" style="padding:50px 0">
-            <div class="logo">login</div>
+            <div class="logo">Login</div>
             <div class="login-form-1">
                 <form id="login-form" class="text-left">
                     <div class="login-form-main-message"></div>
                     <div class="main-login-form">
                         <div class="login-group">
                             <div class="form-group">
-                                <label for="lg_username" class="sr-only">Username</label>
-                                <input type="text" class="form-control" id="lg_username" name="lg_username" placeholder="username">
+                                <label for="lg_username" class="sr-only">Username:</label>
+                                <input type="text" class="form-control" id="lg_username" name="lg_username" > 
                             </div>
                             <div class="form-group">
-                                <label for="lg_password" class="sr-only">Password</label>
-                                <input type="password" class="form-control" id="lg_password" name="lg_password" placeholder="password">
+                                <label for="lg_password" class="sr-only">Password:</label>
+                                <input type="password" class="form-control" id="lg_password" name="lg_password" > 
                             </div>
                             <div class="form-group login-group-checkbox">
                                 <input type="checkbox" id="lg_remember" name="lg_remember">
-                                <label for="lg_remember">remember</label>
+                                <label for="lg_remember">Gravar dados</label>
                             </div>
                         </div>
                         <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
                     </div>
                     <div class="etc-login-form">
-                        <p>forgot your password? <a href="#">click here</a></p>
-                        <p>new user? <a href="#">create new account</a></p>
+                         <a href="#"><p>Esqueceu sua senha?</p></a>
+                        <a href="#"><p>Criar uma nova conta. </p></a>
                     </div>
                 </form>
             </div>
