--- a/telas/Tis2/client/src/forgotPassword.html
+++ b/telas/Tis2/client/src/forgotPassword.html
@@ -1,5 +1,5 @@
 <head>
-        <link rel="stylesheet" type="text/css" href="css/index.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/registro.css" media="screen" />    
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -12,25 +12,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
         <div class="text-center" style="padding:50px 0">
-            <div class="logo">forgot password</div>
+            <div class="logo">Recuperar senha</div>
             <div class="login-form-1">
                 <form id="forgot-password-form" class="text-left">
                     <div class="etc-login-form">
-                        <p>When you fill in your registered email address, you will be sent instructions on how to reset your password.</p>
+                        <p>Assim que informar seu email de acesso, será enviado a sua caixa de entrada os passos para mudar a sua senha.</p>
                     </div>
                     <div class="login-form-main-message"></div>
                     <div class="main-login-form">
                         <div class="login-group">
                             <div class="form-group">
-                                <label for="fp_email" class="sr-only">Email address</label>
-                                <input type="text" class="form-control" id="fp_email" name="fp_email" placeholder="email address">
+                                <label for="fp_email" class="sr-only">Email:</label>
+                                <input type="text" class="form-control" id="fp_email" name="fp_email" placeholder="email de acesso">
                             </div>
                         </div>
                         <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
                     </div>
                     <div class="etc-login-form">
-                        <p>already have an account? <a href="#">login here</a></p>
-                        <p>new user? <a href="#">create new account</a></p>
+                        <p><a href="#">Já possui uma conta?</a></p>
+                        <p><a href="#">Criar uma conta nova.</a></p>
                     </div>
                 </form>
             </div>
