--- a/telas/Tis2/client/src/forgotPassword.html
+++ b/telas/Tis2/client/src/forgotPassword.html
@@ -29,8 +29,8 @@
                         <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
                     </div>
                     <div class="etc-login-form">
-                        <p><a href="#">Já possui uma conta?</a></p>
-                        <p><a href="#">Criar uma conta nova.</a></p>
+                        <p><a href="index.html">Já possui uma conta?</a></p>
+                        <p><a href="register.html">Criar uma conta nova.</a></p>
                     </div>
                 </form>
             </div>
