--- a/telas/Tis2/client/src/register.html
+++ b/telas/Tis2/client/src/register.html
@@ -47,8 +47,6 @@
                                 <input type="radio" class="" name="reg_gender" id="female" placeholder="feminino">
                                 <label for="female">Feminino</label>
 
-                                <input type="radio" class="" name="reg_gender" id="female" placeholder="outro">
-                                <label for="female">Outro</label>
                             </div>
                             
                             <div class="form-group login-group-checkbox">
@@ -59,7 +57,7 @@
                         <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
                     </div>
                     <div class="etc-login-form">
-                        <a href="#"><p>Já possui uma conta? </p></a>
+                        <a href="index.html"><p>Já possui uma conta? </p></a>
                     </div>
                 </form>
             </div>
