--- a/telas/Tis2/client/src/index.html
+++ b/telas/Tis2/client/src/index.html
@@ -35,8 +35,8 @@
                         <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
                     </div>
                     <div class="etc-login-form">
-                         <a href="#"><p>Esqueceu sua senha?</p></a>
-                        <a href="#"><p>Criar uma nova conta. </p></a>
+                         <a href="forgotPassword.html"><p>Esqueceu sua senha?</p></a>
+                        <a href="register.html"><p>Criar uma nova conta. </p></a>
                     </div>
                 </form>
             </div>
