--- a/telas/Tis2/client/src/register.html
+++ b/telas/Tis2/client/src/register.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1, maximum-scale=1" />
      
         <div class="text-center" style="padding:50px 0">
             <div class="logo">Registro</div>
