Arquivo banco de dados

--- a/projetoBhaw/WebContent/createProduct.html
+++ b/projetoBhaw/WebContent/createProduct.html
@@ -24,22 +24,26 @@
                     <div class="main-login-form">
                         <div class="login-group">
                             <div class="form-group">
+                            	Nome:
                                 <label for="reg_username" class="sr-only">Nome</label>
                                 <br>
                                 <input type="text" class="form-control" id="reg_name" name="boxNome">
                             </div>
                             <div class="form-group">
+                            	Preço
                                 <label for="reg_password" class="sr-only">Preço</label>
                                 <br>
                                 <input type="text" class="form-control" id="reg_preco" name="boxPreco">
                             </div>
                             <div class="form-group">
+                            	Quantidade
                                 <label for="reg_password_confirm" class="sr-only">Quantidade</label>
                                 <br>
-                                <input type="password" class="form-control" id="reg_quantidade" name="boxQuantidade">
+                                <input type="text" class="form-control" id="reg_quantidade" name="boxQuantidade">
                             </div>
 
                             <div class="form-group">
+                            	Descrição
                                 <label for="reg_email" class="sr-only">Descrição</label>
                                 <br>
                                 <input type="text" class="form-control" id="reg_email" name="boxDescricao">
